# my_assistant

./: .coverage  .cursorrules  .dockerignore  .env  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ALIASES.md  ANTI_HALLUCINATION_DOCUMENTATION_UPDATE.md  ASYNC_IMPLEMENTATION_SUMMARY.md  CELERY_DIAGNOSTIC_CHECKLIST.md  CHANGELOG.md  CLEANUP_REPORT.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_ENVIRONMENT_SUMMARY.md  DISK_USAGE_ANALYSIS.md  DOCKER_BUILD_FILES.md  DOCKER_BUILD_TROUBLESHOOTING.md  DOCKER_SETUP.md  DOCUMENTATION_REORGANIZATION_COMPLETE.md  Dockerfile.ollama  FULL_SYSTEM_TEST.py  Google_Product_Taxonomy.txt  IMPLEMENTATION_SUMMARY.md  INTENT_ROUTING_GUIDE.md  KOMPLEKSOWY_RAPORT_UPORZADKOWANIA_DOKUMENTACJI.md  PODSUMOWANIE_UPORZADKOWANIA_29_06_2025.md  PRODUCTION_TEST_SUMMARY.md  RAPORT_WDROZENIA_ZWIENZLYCH_ODPOWIEDZI.md  README.md  README_CELERY_TEST.md  README_DEVELOPMENT.md  README_DOCKER.md  README_DOCKER_DEV.md  README_FOODSAVE_AI.md  README_SETUP.md  REFACTORING_COMPLETION_REPORT.md  ROADMAP.md  (+104 more)
ai-assistant-dashboard/: app.js  index.html  style.css
backups/: test_backup.tar  test_backup_metadata.json  test_restore_backup.tar  test_restore_backup_metadata.json  test_verify_backup.tar  test_verify_backup_metadata.json
docs/: AGENTS_GUIDE.md  ALL_SCRIPTS_DOCUMENTATION.md  ANTI_HALLUCINATION_GUIDE.md  API_REFERENCE.md  ARCHITECTURE_DOCUMENTATION.md  ASYNC_RECEIPT_PROCESSING_GUIDE.md  AUDIT_REPORT.md  BIELIK_4.5B_PRIMARY_MODEL_SETUP.md  CHANGELOG.md  CONCISE_RESPONSES_IMPLEMENTATION.md  CONVERSATION_CONTEXT_MANAGEMENT.md  DATABASE_GUIDE.md  DATE_TIME_DOCUMENTATION_UPDATE.md  DATE_TIME_QUERY_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCKER_BUILD_TROUBLESHOOTING.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DOCUMENTATION_SUMMARY.md  FINAL_REPORT.md  FRONTEND_ARCHITECTURE.md  GUI_BUGFIXES.md  GUI_DOCKER_MANAGEMENT.md  HEALTH_CHECK_CONFIGURATION.md  IMPLEMENTATION_AUDIT_RECOMMENDATIONS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INFORMATION_ARCHITECTURE.md  KONWERSACJA_PODSUMOWANIE.md  MDC_SETUP_SUMMARY.md  MONITORING_TELEMETRY_GUIDE.md  ORGANIZATION_SUMMARY.md  PANEL_STEROWANIA_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERSONAL_AI_ASSISTANT_AUDIT.md  PROMOTION_MONITORING_GUIDE.md  QUICK_START.md  RAG_DATABASE_MANAGEMENT_IMPLEMENTATION.md  README.md  README_MAIN.md  RECEIPT_ANALYSIS_GUIDE.md  (+11 more)
foodsave-frontend/: .dockerignore  BACKEND_INTEGRATION_SUMMARY.md  CHANGELOG.md  DASHBOARD_IMPLEMENTATION.md  Dockerfile.dev  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json
foodsave-gui/: AUTOSTART_SETUP.md  PODSUMOWANIE_ULEPSZEN.md  PODSUMOWANIE_ULEPSZEN_V2.md  README.md  ULEPSZENIA_DLA_UZYTKOWNIKOW_NIETECHNICZNYCH.md  ZARZADZANIE_KONTENERAMI.md  foodsave-gui.service  index.html  install-autostart.sh  install.sh  script.js  server.py  start-gui.sh  stop-gui.sh  style.css  uninstall-autostart.sh
logs/: backend.log.1  backend.log.2  backend.log.4  backend.log.5  celerybeat-schedule
monitoring/: loki-config.yaml  prometheus.dev.yml  prometheus.yml  promtail-config.yaml
myappassistant-chat-frontend/src-tauri/: Cargo.toml  tauri.conf.json
myappassistant-chat-frontend/src-tauri/binaries/: scraper-node-x86_64-unknown-linux-gnu
myappassistant-chat-frontend/src-tauri/icons/: icon.icns
myappassistant-chat-frontend/src-tauri/src/: lib.rs  main.rs
nginx/: proxy.conf
(+552 files in other folders)
