[tool.poetry]
name = "my_assistant"
version = "0.1.0"
description = "Asystent AI z backendem FastAPI i frontendem Next.js"
authors = ["Twoje Imię <twoj@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pytest-asyncio = ">=0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 