[tool.poetry]
name = "my_assistant"
version = "0.1.0"
description = "Asystent AI z backendem FastAPI i frontendem Next.js"
authors = ["Twoje Imię <twoj@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-multipart = "^0.0.20"
slowapi = "^0.1.9"
aiofiles = "^24.1.0"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
email-validator = "^2.2.0"
langdetect = "^1.0.9"
sentence-transformers = "^3.3.0"
redis = "^5.2.1"
fastapi = "^0.115.13"
uvicorn = "^0.32.1"
pydantic = "^2.11.7"
structlog = "^25.4.0"
numpy = "^2.3.1"
httpx = "^0.28.1"
opentelemetry-api = "^1.34.1"
opentelemetry-sdk = "^1.34.1"
opentelemetry-instrumentation = "^0.55b1"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
sqlalchemy = "^2.0.41"
ollama = "^0.5.1"
pybreaker = "^1.3.0"
pydantic-settings = "^2.10.1"
prometheus-client = "^0.22.1"
opentelemetry-exporter-jaeger = "^1.21.0"
asyncpg = "^0.30.0"
faiss-cpu = "^1.11.0"
pytz = "^2025.2"
requests = "^2.32.4"
deprecated = "^1.2.18"
opentelemetry-instrumentation-httpx = "^0.55b1"
pymupdf = "^1.26.1"
opentelemetry-instrumentation-sqlalchemy = "^0.55b1"
pytesseract = "^0.3.13"
alembic = "^1.16.2"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
memory-profiler = "^0.61.0"
pytest-benchmark = "^5.1.0"
pytest-cov = "^6.2.1"
# Heavy ML packages moved to dev dependencies for faster production builds
torch = "^2.7.1"
transformers = "^4.52.4"
scikit-learn = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 