[package]
name = "foodsave-ai"
version = "1.0.0"
description = "FoodSave AI - Personal Assistant"
authors = ["FoodSave AI Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
tauri = { version = "2.6", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
notify-rust = "4"
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"] 
